--- a/payments/templates/payments/organization_detail.html
+++ b/payments/templates/payments/organization_detail.html
@@ -1,9 +1,9 @@
     <h3>{{ organization.title }}</h3>
     <ul>
-        <li>tariff: {{ organization.tariff }}</li>
-        <li>units: {{ organization.measurement_units }}</li>
-        {% if last_payment.previous_counter_value %}
-            <li>previous counter value: {{ last_payment.previous_counter_value }}
+        <li>tariff: {{ organization.tariff }} hrn.</li>
+        <li>units: {{ organization.measurement_units }}.</li>
+        {% if last_payment.current_counter_value %}
+            <li>previous counter value: {{ last_payment.current_counter_value }} ({{ organization.measurement_units }}.)
         {% endif %}
     </ul>
 
