--- a/payments/templates/payments/payment_create.html
+++ b/payments/templates/payments/payment_create.html
@@ -4,7 +4,7 @@ New payment:
 
 <form method="post">
     {% csrf_token %}
-    <input type="number" name="previous_counter_value" placeholder="previous" value="{{ last_payment.previous_counter_value }}">
+    <input type="number" name="previous_counter_value" placeholder="previous" value="{{ last_payment.current_counter_value }}">
     <input type="number" name="current_counter_value" placeholder="current">
 
     <input type="submit" value="OK">
