--- a/payments/static/payments/style.css
+++ b/payments/static/payments/style.css
@@ -11,6 +11,11 @@ html, body {
 
 }
 
+.organizations {
+    display: block;
+    margin-top: 30px;
+}
+
 .container {
     width: 100%;
     text-align: center;
@@ -27,3 +32,6 @@ html, body {
     max-width: 500px;
 }
 
+.username {
+    margin-top: 10px;
+}
