--- a/payments/static/payments/style.css
+++ b/payments/static/payments/style.css
@@ -10,10 +10,56 @@ html, body {
 */
 
 }
-
+/*
 .organizations {
     display: block;
     margin-top: 30px;
+}*/
+
+.organization-item {
+    height: 150px;
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(56,56,56,1) 100%);
+/*
+    background-color: #333;
+*/
+    color: white;
+/*
+    box-sizing: border-box;
+*/
+    position: relative;
+    padding: 5px;
+    margin-top: 30px;
+    border-radius: 10px;
+    display: block;
+    text-decoration: none;
+    padding-top: 54px;
+}
+
+.organization-item:hover {
+    color: orange;
+    background-color: #2b2b2b;
+    text-decoration: none;
+/*
+    box-shadow: 0px 0px 35px -6px rgba(0,0,0,0.75);
+*/
+    transform: scale(1.02);
+}
+
+.organization-item:active {
+  background-color: #282828;
+  box-shadow: 0px 0px 0px 6px rgba(0,0,0,0.25);
+  text-decoration: none;
+/*
+  transform: scale(.98);
+*/
+}
+
+.organization-title {
+    padding-top: 54px;
+    /*position: relative;
+    top: 50%;
+    transform: translateY(-50%);*/
+
 }
 
 .container {
@@ -22,16 +68,26 @@ html, body {
     margin: auto;
 }
 
+.cart-container {
+    position: relative;
+    width: 300px;
+}
 
-.content {
+.cart-items {
+    display: none;
+    position: absolute;
+    top: 48px;
     width: 100%;
-    margin: 5px auto 25px auto;
-    padding: 0 15px;
-    color: #333;
-    font-weight: regular;
-    max-width: 500px;
+    background-color: orange;
+    padding: 15px;
+    box-shadow: 0px 10px 33px -4px rgba(0,0,0,0.33);
+}
+
+.cart-items li {
+    text-align: left;
 }
 
 .username {
     margin-top: 10px;
 }
+
