--- a/payments/templates/payments/base.html
+++ b/payments/templates/payments/base.html
@@ -23,14 +23,10 @@
     </title>
 </head>
 <body>
+{% include 'payments/header.html' %}
 <div class="container" id="ajax-response-here">
-    <div class="row">
-        <div class="content">
-            {% block content %}
-            {% endblock %}
-        </div>
-    </div>
-
+    {% block content %}
+    {% endblock %}
 </div>
 
 
@@ -38,7 +34,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="{% static 'payments/js/index.js' %}"></script>
+<script src="{% static 'payments/js/scripts.js' %}"></script>
 
 </body>
 
