--- a/payments/templates/payments/payment_archive.html
+++ b/payments/templates/payments/payment_archive.html
@@ -1,8 +1,12 @@
 <h3>{{ organization }}</h3>
 {% for payment in payments %}
-<a href="{% url 'payment_detail_url' payment.id %}">
+<div class="counter-values">
+    <a href="{% url 'payment_detail_url' payment.id %}">
     <button>
         {{ payment.previous_counter_value }} - {{ payment.current_counter_value }} ({{ payment.organization.measurement_units }}.)
     </button>
-</a><br>
+</a>
+</div>
+
+<br>
 {% endfor %}
