--- a/payments/templates/payments/payment_detail.html
+++ b/payments/templates/payments/payment_detail.html
@@ -1,8 +1,22 @@
-<h3>{{ payment.organization }}</h3>
-<ul>
-    <li>Date: {{ payment.date }}</li>
-    <li>Tariff: {{ payment.organization.tariff }} hrn.</li>
-    <li>counter values: {{ payment.previous_counter_value }} - {{ payment.current_counter_value }} ({{ payment.organization.measurement_units }}.)</li>
-    <li>Difference: {{ payment.difference }} {{ payment.organization.measurement_units }}.</li>
-    <li>Payment: {{ payment.amount }} hrn.</li>
-</ul>
+{% extends 'payments/base.html' %}
+
+{% block content %}
+<h3><span id="organization-name">{{ payment.organization }}</span></h3>
+    <p id="payment-period">Period: {{ payment.payment_period }}</p>
+    <p id="date">Date: <span>{{ payment.date }}</span></p>
+    <p id="tariff">Tariff: {{ payment.organization.tariff }} hrn.</p>
+    <p id="counter-values">counter values: {{ payment.previous_counter_value }} - {{ payment.current_counter_value }} ({{ payment.organization.measurement_units }}.)</p>
+    <p id="difference">Difference: {{ payment.difference }} {{ payment.organization.measurement_units }}.</p>
+    <p id="price">Price: {{ payment.price }} hrn.</p>
+<a href="{% url 'payment_delete_url' payment.pk %}"><button>Delete</button></a>
+<a href="" class="btn btn-primary" id="btn-add-to-cart"
+   data-organization="{{ payment.organization }}"
+   data-payment-period="{{ payment.payment_period }}"
+   data-date="{{ payment.date }}"
+   data-tariff="{{ payment.organization.tariff }}"
+   data-previous-value="{{ payment.previous_counter_value }}"
+   data-current-value="{{ payment.current_counter_value }}"
+   data-difference="{{ payment.difference }}"
+   data-units="{{ payment.organization.measurement_units }}"
+   data-price="{{ payment.price }}">Add to Cart</a>
+{% endblock %}
