--- a/payments/templates/payments/header.html
+++ b/payments/templates/payments/header.html
@@ -6,11 +6,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      {% if organization_list_url != request.path %}
+      <!--{% if organization_list_url != request.path %}
       <li class="nav-item active">
         <a class="nav-link disabled" href="{% url 'organization_list_url' %}"">Home <span class="sr-only">(current)</span></a>
       </li>
-      {% endif %}
+      {% endif %}-->
       <li class="nav-item">
         <a class="nav-link" href="#">Features</a>
       </li>
@@ -24,10 +24,23 @@
     <ul class="navbar-nav ml-auto mr-2">
       <li>
         <div class="cart-container">
-          <a class="nav-link" id="cart" href="">Cart</a>
+          <a class="nav-link" id="cart" href="">Cart <span id="total-payments">
+            {% if total_payments %}
+              ({{ total_payments }})
+            {% else %}
+              (0)
+            {% endif %}
+          </span></a>
           <div class="cart-items">
-            <ul>
-              Cart is Empty
+            <ul id="cart-snippet">
+              {% for payment in payments_in_cart %}
+              <li>
+                <h4>{{ payment.payment.organization.title }}</h4>
+                values: {{ payment.payment.previous_counter_value }} - {{ payment.payment.current_counter_value }}<br>
+                difference: {{ payment.payment.difference }} {{ payment.payment.organization.measurement_units }}<br>
+                price: {{ payment.price_per_payment }} UAH <a href="" class="delete-item">X</a><br><br>
+              </li>
+              {% endfor %}
             </ul>
           </div>
         </div>
