cart add and remove

--- a/payments/templates/payments/base.html
+++ b/payments/templates/payments/base.html
@@ -29,7 +29,9 @@
     {% endblock %}
 </div>
 
-
+<!--CSRF token form-->
+<form id="csrf_token">{% csrf_token %}
+</form>
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
