--- a/payments/templates/payments/snippets/append_to_cart.html
+++ b/payments/templates/payments/snippets/append_to_cart.html
@@ -1,6 +1,6 @@
 <li>
-    <h4>{{ payment.organization.title }}</h4>
-    values: {{ payment.previous_counter_value }} - {{ payment.current_counter_value }}<br>
-    difference: {{ payment.difference }} {{ payment.organization.measurement_units }}<br>
-    price: {{ price_per_payment }} UAH <a href="" class="delete-item">X</a><br><br>
+    <h4>{{ payment.payment.organization.title }}</h4>
+    values: {{ payment.payment.previous_counter_value }} - {{ payment.payment.current_counter_value }}<br>
+    difference: {{ payment.payment.difference }} {{ payment.payment.organization.measurement_units }}<br>
+    price: {{ price_per_payment }} UAH <a href="{% url 'cart_delete_url' %}" class="delete-item" data-payments-in-cart-pk="{{ payment.pk }}">X</a><br><br>
 </li>
