--- a/payments/templates/payments/header.html
+++ b/payments/templates/payments/header.html
@@ -43,6 +43,9 @@
               </li>
               {% endfor %}
             </ul>
+            <div class="text-right">
+              <a href="{% url 'checkout_url' %}"><button class="btn btn-success">Checkout</button></a>
+            </div>
           </div>
         </div>
       </li>
