--- a/payments/templates/payments/header.html
+++ b/payments/templates/payments/header.html
@@ -1,7 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+{% load static %}
+<nav class="navbar sticky-bottom navbar-toggleable-xs navbar-expand-sm navbar-light bg-light ">
   {% url 'organization_list_url' as organization_list_url %}
-  <a class="navbar-brand" href="{% url 'organization_list_url' %}">Utils</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  {% if  request.path == organization_list_url %}
+  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><img
+      src="{% static 'payments/media/img/onehome_logo_gradient.png' %}" style="width: 150px; height: auto"
+      alt="onehome"></a>
+  {% else %}
+  <a class="navbar-brand" href="{% url 'organization_list_url' %}"><img
+      src="{% static 'payments/media/img/onehome_logo_gradient.png' %}"style="width: 150px; height: auto"
+      alt="onehome"></a>
+  {% endif %}
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
@@ -21,34 +31,36 @@
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
     </ul>
-    <ul class="navbar-nav ml-auto mr-2">
+    <ul class="navbar-nav ml-auto text-right">
       <li>
-        <div class="cart-container">
-          <a class="nav-link" id="cart" href="">Cart <span id="total-payments">
+        <a class="nav-link" id="cart" href="">Cart <span id="total-payments">
             {% if total_payments %}
-              ({{ total_payments }})
+            ({{ total_payments }})
             {% else %}
-              (0)
+            (0)
             {% endif %}
           </span></a>
-          <div class="cart-items">
-            <ul id="cart-snippet">
-              {% for payment in payments_in_cart %}
-              <li>
-                <h4>{{ payment.payment.organization.title }}</h4>
-                values: {{ payment.payment.previous_counter_value }} - {{ payment.payment.current_counter_value }}<br>
-                difference: {{ payment.payment.difference }} {{ payment.payment.organization.measurement_units }}<br>
-                price: {{ payment.price_per_payment }} UAH <a href="{% url 'cart_delete_url' %}" class="delete-item" data-payments-in-cart-pk="{{ payment.pk }}">X
-              </a><br><br>
-              </li>
-              {% endfor %}
-            </ul>
-            <div class="text-right">
-              <a href="{% url 'checkout_url' %}"><button class="btn btn-success">Checkout</button></a>
-            </div>
-          </div>
-        </div>
+      </li>
+      <li>
+        <a href="{% url 'profile_settings_url' %}" class="nav-link"><i class="far fa-user"></i></a>
       </li>
     </ul>
   </div>
 </nav>
+<div class="cart-items">
+  <ul id="cart-snippet">
+    {% for payment in payments_in_cart %}
+    <li>
+      <h4>{{ payment.payment.organization.title }}</h4>
+      values: {{ payment.payment.previous_counter_value }} - {{ payment.payment.current_counter_value }}<br>
+      difference: {{ payment.payment.difference }} {{ payment.payment.organization.measurement_units }}<br>
+      price: {{ payment.price_per_payment }} UAH <a href="{% url 'cart_delete_url' %}" class="delete-item"
+        data-payments-in-cart-pk="{{ payment.pk }}">X
+      </a><br><br>
+    </li>
+    {% endfor %}
+  </ul>
+  <div class="text-right">
+    <a href="{% url 'checkout_url' %}"><button class="btn btn-success">Checkout</button></a>
+  </div>
+</div>
