--- a/payments/templates/payments/organization_list.html
+++ b/payments/templates/payments/organization_list.html
@@ -1,23 +1,30 @@
 {% extends 'payments/base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="row">
-    <div class="col-12 organizations">
-        <div class="row">
-            {% for organization in organization %}
-            <div class="col-4">
-                <a href="{% url 'organization_detail_url' organization.slug %}" class="organization-item">{{ organization.title }}</a>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
+	<div class="col-12 organizations">
+		<div class="services text-left">
+			<span class="">Services</span>
+		</div>
+		<div class="row">
+			{% comment %} <img src="{% static 'payments/media/img/alarm.png' %}" style="height: 20px; width: auto"
+				alt=""> {% endcomment %}
+			{% for organization in organization %}
+			<div class="col-6 col-sm-4 col-md-3 col-lg-3 org-item-wrapper">
+				<a href="{% url 'organization_detail_url' organization.slug %}"
+					class="col organization-item">{{ organization.title }}</a>
+			</div>
+			{% endfor %}
+		</div>
+	</div>
 </div>
 <div class="add-organization">
-    <a href="{% url 'organization_create_url' %}" class="btn btn-primary mt-5">Add Organization</a>
+	<a href="{% url 'organization_create_url' %}" class="btn btn-primary mt-5">Add Organization</a>
 </div>
-<div class="username">
-    {{ user.last_name }}
-    {{ user.first_name|slice:":1" }}.
-    {{ user.surname|slice:":1" }}.
-</div>
+{% comment %} <div class="username">
+	{{ user.last_name }}
+	{{ user.first_name|slice:":1" }}.
+	{{ user.surname|slice:":1" }}.
+</div> {% endcomment %}
 {% endblock %}
