--- a/payments/static/payments/style.css
+++ b/payments/static/payments/style.css
@@ -5,7 +5,6 @@ body {
   color: #161616;
   height: 100%;
   min-width: 200px;
-  justify-content: center;
   font-family: "Roboto", sans-serif;
   /*
     font-family: 'Ubuntu', sans-serif;
@@ -23,28 +22,37 @@ a {
 input {
   border: 0 none;
   /* border-radius: 8px; */
-  border: none;
-  border-bottom: 1px solid #696e78;
-  background-color: #ffffff;
-  padding-left: 15px;
-  height: 40px;
+  border: none !important;
+  border-bottom: 1px solid #696e78 !important;
+  background-color: #ffffff  !important;
+  padding-left: 15px  !important;
+  height: 40px  !important;
 }
 
 input:focus {
-    border-bottom: 2px solid #655feb;
+    border-bottom: 2px solid #655feb  !important;
   /* border: 1px solid #655feb; */
   /* box-shadow: 0 0 0 0.2rem rgba(114, 38, 255, 0.5) !important; */
 }
+
+.field-label {
+    font-family: "Raleway", sans-serif;
+    font-weight: 600;
+    font-size: 0.9rem;
+    color: #655feb;
+}
+
 
 .archive a {
   text-decoration: none !important;
   color: #696e78 !important;
 }
 
+
 .btn-primary {
   color: white !important;
   border-radius: 30px;
-  border-color: #605f68;
+  border-color: #655feb;
   background-color: #655feb;
   box-shadow: 0px 14px 25px -6px rgba(147, 143, 230, 1);
 }
@@ -79,29 +87,43 @@ input:focus {
   overflow-wrap: break-word;
 }
 
-.services {
+
+.dropdown-menu-icon {
+    min-width: 10px !important;
+}
+
+.icon-preview {
+    margin-top: 15px;
+}
+
+.main-title {
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 30px;
   position: relative;
-  /* left: 10px; */
-  /* margin-top: 10px; */
   color: #696e78;
 }
 
+.service-detail {
+    max-width: 580px;
+}
+
+.service-detail-row {
+    justify-content: center;
+}
+
 .service-title {
+  position: relative;
   padding-left: 0 !important;
   padding-right: 0 !important;
   display: flex;
   justify-content: start;
   max-width: 350px;
-  margin: 8px auto 15px auto;
+  margin: 8px auto 15px 15px;
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 30px;
   position: relative;
-  /* left: 10px; */
-  /* margin-top: 10px; */
   color: #696e78;
 }
 
@@ -129,31 +151,41 @@ input:focus {
 }
 
 .info-wrapper {
-  max-width: 350px;
-  font-family: "Raleway", sans-serif;
-  font-weight: 400;
-  font-size: 1.4rem;
+    max-width: 580px;
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
+    font-size: 1.4rem;
 /*
-  height: 100%;
+    height: 100%;
 */
-  margin: 8px auto 15px auto;
-  background-color: #ffffff;
-  color: #b2afbd;
-  position: relative;
-  border-radius: 13px;
-  border: #f8fbff solid 1px;
-  display: block;
-  text-decoration: none;
-  box-shadow: 0px 8px 16px -4px rgba(230, 235, 242, 1);
+    margin: 8px auto 15px auto;
+    background-color: #ffffff;
+    color: #b2afbd;
+    position: relative;
+    border-radius: 13px;
+    border: #f8fbff solid 1px;
+    display: block;
+    text-decoration: none;
+    box-shadow: 0px 8px 16px -4px rgba(230, 235, 242, 1);
 }
+
+#service-create-form input {
+    margin-bottom: 35px;
+}
+
 
 svg {
   margin-bottom: 2px;
 }
 
 .info {
-  margin: 20px;
+  margin: 50px;
 }
+
+/*.new-payment-button {
+    position: relative;
+    top: 0px;
+}*/
 
 .info-values {
   font-family: "Rubik", sans-serif;
@@ -182,13 +214,32 @@ org-item-apper {
   padding-right: 10px !important;
 }
 
+.icon {
+    height: 40px;
+    width: auto;
+    margin-bottom: 15px;
+/*
+    color: #696e78;
+*/
+    color: red;
+}
+
+.icon:hover {
+    transform: scale(1.02);
+}
+
+
+/*.services-row {
+    justify-content:center;
+}*/
+
 .organization-item {
   font-family: "Raleway", sans-serif;
   font-weight: 500;
   font-size: 1.4rem;
   height: 200px;
   margin: 8px auto 15px auto;
-  padding-top: 77px;
+  padding-top: 51px;
   background-color: #ffffff;
   color: #b2afbd;
   position: relative;
@@ -197,15 +248,20 @@ org-item-apper {
   display: block;
   text-decoration: none;
   box-shadow: 0px 8px 16px -4px rgba(230, 235, 242, 1);
-}
+/*
+  transition: transform 5s, filter 3s ease-in-out;
+*/
+    transition: 0.45s;
+    }
 
 .organization-item:hover {
   color: white;
-  background: linear-gradient(
+  /*background: linear-gradient(
     90deg,
     rgba(92, 92, 232, 1) 0%,
     rgba(127, 105, 245, 1) 100%
-  );
+  );*/
+    background-color: #655feb;
   text-decoration: none;
   border: #655feb solid 1px;
   box-shadow: 0px 24px 37px -16px rgba(147, 143, 230, 1);
