--- a/payments/templates/payments/organization_update.html
+++ b/payments/templates/payments/organization_update.html
@@ -1,7 +1,34 @@
-<form method="post">
-    {% csrf_token %}
-    <h3>Edit {{ object.title }}</h3>
-    {{ form.as_p }}<br>
-    <a href="{% url 'organization_list_url' %}">Cancel</a>
-    <input type="submit" value="OK">
-</form>
+{% extends 'payments/base.html' %}
+{% load static %}
+
+{% block content %}
+
+<div class="form-group">
+
+
+    <form method="post" id="service-create-form">
+        {% csrf_token %}
+        {{ form.title }}
+        {{ form.tariff }}
+        {{ form.measurement_units }}
+        <div class="icon-preview"></div>
+        <input type="hidden" name="icon" id="icon-pk" value="">
+        <div class="dropdown mt-5">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Icons
+            </button>
+            <div class="dropdown-menu dropdown-menu-icon" aria-labelledby="dropdownMenuButton">
+                {% for icon in icons %}
+                <a class="dropdown-item dropdown-icon" data-icon-pk="{{ icon.pk }}",
+                   data-url="{% url 'icon_select_url' %}"><img src="{{ icon.icon.url }}" style="width: 20px; height:auto;"></a>
+                {% endfor %}
+            </div>
+        </div>
+        <img src="" alt="">
+    </form>
+</div>
+<div class="new-payment-button">
+    <button type="submit" form="service-create-form" class="btn btn-primary mt-5">Submit</button>
+</div>
+
+{% endblock %}
